--- a/src/ZeroChat.Client.Wpf/appsettings.json
+++ b/src/ZeroChat.Client.Wpf/appsettings.json
@@ -2,6 +2,6 @@
   "value": "hello world",
   "connectionSettings": {
     "requestService": "tcp://localhost:5559",
-    "subscriptionService": "tcp://localhost:5560"
+    "messageService": "tcp://localhost:5560"
   }
 }
